[package]
name = "HouseManagerBack"
version = "0.1.0"
authors = ["Nicholas Buckeridge <bucknich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
diesel = { version = "1.4.5", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.14.2"
